# wai-telegram

./: .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  SPECS.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  rollback.sh
.github/workflows/: deploy.yml
nginx/: telegram-ai.conf
systemd/: wai-backend.service  wai-celery-beat.service  wai-celery.service  wai-frontend.service  wai-listener.service  wai-mcp-sse.service
