[project]
name = "wai-telegram"
version = "0.1.0"
description = "Telegram AI Message Manager - Multi-user SaaS with semantic search and MCP integration"
readme = "README.md"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/backend", "packages/mcp-server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
